--- a/env.sample
+++ b/env.sample
@@ -66,6 +66,15 @@ SUPERVISOR_CONF_FILE=./services/supervisor/supervisord.conf
 SUPERVISOR_HOST_PORT_C=9001
 
 #
+# Hyper80
+#
+HYPERF80_VERSION=8.0.9
+HYPERF80_PHP_CONF_FILE=./services/hyperf80/php.ini
+HYPERF80_FPM_CONF_FILE=./services/hyperf80/php-fpm.conf
+HYPERF80_LOG_DIR=./logs/hyperf80
+HYPERF80_EXTENSIONS=
+
+#
 # PHP8
 #
 # Available PHP_EXTENSIONS:
