--- a/services/php80/php.ini
+++ b/services/php80/php.ini
@@ -1918,12 +1918,18 @@ ldap.max_links = -1
 ; End:
 
 [XDebug]
-xdebug.mode=debug
-xdebug.remote_handler = "dbgp"
-; Set to host.docker.internal on Mac and Windows, otherwise, set to host real ip
-xdebug.client_host = host.docker.internal
-;xdebug.remote_port = 9000
-xdebug.remote_log = /var/log/php/xdebug.log
+;xdebug.mode=debug
+;xdebug.remote_handler = "dbgp"
+;; Set to host.docker.internal on Mac and Windows, otherwise, set to host real ip
+;xdebug.client_host = host.docker.internal
+;;xdebug.remote_port = 9000
+;xdebug.remote_log = /var/log/php/xdebug.log
+
+xdebug.mode=develop,debug
+xdebug.start_with_request=yes
+xdebug.discover_client_host=0
+xdebug.client_host=host.docker.internal
+xdebug.log=/var/log/php/xdebug.log
 
 SERVER_ENV=develop
 
