--- a/env.sample
+++ b/env.sample
@@ -74,6 +74,16 @@ HYPERF80_LOG_DIR=./logs/hyperf80
 HYPERF80_EXTENSIONS=
 
 #
+# PHP8.1
+#
+PHP81_VERSION=8.1.21
+PHP81_PHP_CONF_FILE=./services/php81/php.ini
+PHP81_FPM_CONF_FILE=./services/php81/php-fpm.conf
+PHP81_LOG_DIR=./logs/php81
+PHP81_EXTENSIONS=pdo_mysql,mysqli,mbstring,gd,curl,opcache,amqp,mongodb,fileinfo,iconv,openssl,pcntl,PDO,pdo_pgsql,pgsql,redis,swoole,xlswriter,xml,xmlreader,xmlwriter,zip,zlib,xdebug
+
+
+#
 # PHP8
 #
 # Available PHP_EXTENSIONS:
