--- a/env.sample
+++ b/env.sample
@@ -85,7 +85,7 @@ HYPERF80_VERSION=8.0.9
 HYPERF80_PHP_CONF_FILE=./services/hyperf80/php.ini
 HYPERF80_FPM_CONF_FILE=./services/hyperf80/php-fpm.conf
 HYPERF80_LOG_DIR=./logs/hyperf80
-HYPERF80_EXTENSIONS=
+HYPERF80_EXTENSIONS="php8-pecl-mongodb"
 
 #
 # PHP8.1
