--- a/services/hyperf81/extensions/xdebug.ini
+++ b/services/hyperf81/extensions/xdebug.ini
@@ -1,5 +1,5 @@
 ;[XDebug]
-;extension=xdebug
+;zend_extension=xdebug
 ;xdebug.mode=debug
 ;xdebug.start_with_request=yes
 ;xdebug.discover_client_host=0
