--- a/env.sample
+++ b/env.sample
@@ -79,6 +79,12 @@ SUPERVISOR_CONF_FILE=./services/supervisor/supervisord.conf
 SUPERVISOR_HOST_PORT_C=9001
 
 #
+# pgsql11
+#
+PGSQL11_CONF_FILE=./services/pgsql11/postgresql.conf
+POSTGRES_PASSWORD=password
+
+#
 # Hyper80
 #
 HYPERF80_VERSION=8.0.9
